<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:weightSum="1"
    tools:context="com.example.quaresma.smarthome.MainActivity">

    <android.support.v7.widget.Toolbar
        android:id="@+id/my_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        android:foregroundTint="@android:color/white"
        android:elevation="4dp"
        android:popupTheme="@style/ThemeOverlay.AppCompat.Light"/>

    <android.support.v7.widget.CardView
        android:id="@+id/card_view"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="8dp"
        card_view:cardCornerRadius="4dp">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:weightSum="1">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textView3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:layout_marginLeft="8dp"
                    android:layout_marginRight="8dp"
                    android:layout_marginTop="8dp"
                    android:text="@string/temperatura"
                    android:textColor="@android:color/holo_blue_dark"
                    android:textSize="30sp"
                    card_view:layout_constraintBottom_toTopOf="@+id/imageView"
                    card_view:layout_constraintHorizontal_bias="0.049"
                    card_view:layout_constraintLeft_toLeftOf="parent"
                    card_view:layout_constraintRight_toRightOf="parent"
                    card_view:layout_constraintTop_toTopOf="parent"
                    card_view:layout_constraintVertical_bias="0.615" />

                <LinearLayout
                    android:layout_width="187dp"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="16dp">

                    <TextView
                        android:id="@+id/temp_text"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="right"
                        android:fontFamily="sans-serif-smallcaps"
                        android:text="25"
                        android:textAllCaps="false"
                        android:textAppearance="@style/TextAppearance.AppCompat.Display2"
                        android:textColor="@android:color/darker_gray"
                        android:textSize="90sp"
                        card_view:layout_constraintBottom_toBottomOf="parent"
                        card_view:layout_constraintTop_toTopOf="parent"
                        tools:layout_editor_absoluteX="207dp" />

                    <TextView
                        android:id="@+id/textView2"
                        android:layout_width="wrap_content"
                        android:layout_height="50dp"
                        android:layout_gravity="right"
                        android:layout_marginBottom="8dp"
                        android:layout_marginLeft="0dp"
                        android:layout_marginRight="8dp"
                        android:layout_marginTop="8dp"
                        android:fontFamily="sans-serif-smallcaps"
                        android:text="°"
                        android:textColor="@android:color/darker_gray"
                        android:textSize="90sp"
                        card_view:layout_constraintBottom_toBottomOf="parent"
                        card_view:layout_constraintHorizontal_bias="0.0"
                        card_view:layout_constraintLeft_toRightOf="@+id/textView"
                        card_view:layout_constraintRight_toRightOf="parent"
                        card_view:layout_constraintTop_toTopOf="parent"
                        card_view:layout_constraintVertical_bias="0.465" />
                </LinearLayout>


            </LinearLayout>

            <LinearLayout
                android:layout_width="115dp"
                android:layout_height="137dp"
                android:layout_gravity="center"
                android:layout_marginTop="16dp"
                android:orientation="horizontal"
                android:layout_weight="0.74">


                <ImageView
                    android:id="@+id/imageView"
                    android:layout_width="114dp"
                    android:layout_height="100dp"
                    android:layout_marginBottom="16dp"
                    android:layout_marginRight="8dp"
                    android:src="@drawable/ic_home"
                    card_view:layout_constraintBottom_toBottomOf="parent"
                    card_view:layout_constraintHorizontal_bias="0.233"
                    card_view:layout_constraintLeft_toLeftOf="parent"
                    card_view:layout_constraintRight_toLeftOf="@+id/textView" />
            </LinearLayout>


        </LinearLayout>


    </android.support.v7.widget.CardView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="8dp"
        android:orientation="horizontal"
        android:weightSum="1">

        <android.support.v7.widget.CardView
            android:id="@+id/card_view2"
            android:layout_width="124dp"
            android:layout_height="285dp"
            android:layout_gravity="left"
            android:layout_marginBottom="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="2dp"
            android:layout_marginTop="8dp"
            android:layout_weight="0.47"
            android:paddingTop="20dp"
            card_view:cardCornerRadius="4dp">

            <android.support.constraint.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:id="@+id/warnning"
                    android:layout_width="114dp"
                    android:layout_height="100dp"
                    android:layout_gravity="center"
                    android:layout_marginLeft="8dp"
                    android:layout_marginRight="8dp"
                    android:layout_marginTop="9dp"
                    android:visibility="gone"
                    android:src="@drawable/ic_warning_black_24dp"
                    card_view:layout_constraintHorizontal_bias="0.489"
                    card_view:layout_constraintLeft_toLeftOf="parent"
                    card_view:layout_constraintRight_toRightOf="parent"
                    card_view:layout_constraintTop_toBottomOf="@+id/switch_presenca" />

                <ImageView
                    android:id="@+id/safe_house"
                    android:layout_width="114dp"
                    android:layout_height="100dp"
                    android:layout_gravity="center"
                    android:layout_marginLeft="8dp"
                    android:layout_marginRight="8dp"
                    android:layout_marginTop="9dp"
                    android:src="@drawable/ic_verified_user_black_24px"
                    card_view:layout_constraintHorizontal_bias="0.489"
                    card_view:layout_constraintLeft_toLeftOf="parent"
                    card_view:layout_constraintRight_toRightOf="parent"
                    card_view:layout_constraintTop_toBottomOf="@+id/switch_presenca" />

                <TextView
                    android:id="@+id/textView4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:layout_marginLeft="8dp"
                    android:layout_marginRight="8dp"
                    android:layout_marginTop="8dp"
                    android:text="@string/detector_de_presen_a"
                    android:textColor="@android:color/holo_blue_dark"
                    android:textSize="14sp"
                    card_view:layout_constraintBottom_toTopOf="@+id/switch_presenca"
                    card_view:layout_constraintHorizontal_bias="0.0"
                    card_view:layout_constraintLeft_toLeftOf="parent"
                    card_view:layout_constraintRight_toRightOf="parent"
                    card_view:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/label_safe"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:layout_marginLeft="8dp"
                    android:layout_marginRight="8dp"
                    android:layout_marginTop="8dp"
                    android:text="@string/casa_segura"
                    android:textColor="#18be6d"
                    android:textSize="18sp"
                    card_view:layout_constraintBottom_toBottomOf="parent"
                    card_view:layout_constraintHorizontal_bias="0.492"
                    card_view:layout_constraintLeft_toLeftOf="parent"
                    card_view:layout_constraintRight_toRightOf="parent"
                    card_view:layout_constraintTop_toBottomOf="@+id/safe_house"
                    card_view:layout_constraintVertical_bias="0.0" />
                <TextView
                    android:id="@+id/label_warnning"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:layout_marginLeft="8dp"
                    android:layout_marginRight="8dp"
                    android:layout_marginTop="8dp"
                    android:text="@string/casa_invadida"
                    android:textColor="#ffc400"
                    android:textSize="18sp"
                    android:visibility="gone"
                    card_view:layout_constraintBottom_toBottomOf="parent"
                    card_view:layout_constraintHorizontal_bias="0.492"
                    card_view:layout_constraintLeft_toLeftOf="parent"
                    card_view:layout_constraintRight_toRightOf="parent"
                    card_view:layout_constraintTop_toBottomOf="@+id/warnning"
                    card_view:layout_constraintVertical_bias="0.0" />

                <Switch
                    android:id="@+id/switch_presenca"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="8dp"
                    android:layout_marginRight="8dp"
                    android:onClick="ligarPresenca"
                    card_view:layout_constraintHorizontal_bias="0.495"
                    card_view:layout_constraintLeft_toLeftOf="parent"
                    card_view:layout_constraintRight_toRightOf="parent"
                    tools:layout_editor_absoluteY="49dp" />
            </android.support.constraint.ConstraintLayout>
        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:id="@+id/card_view3"
            android:layout_width="124dp"
            android:layout_height="285dp"
            android:layout_gravity="left"
            android:layout_marginBottom="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="2dp"
            android:layout_marginTop="8dp"
            android:layout_weight="0.47"
            android:paddingTop="20dp"
            card_view:cardCornerRadius="4dp">

            <TextView
                android:id="@+id/textView7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="14dp"
                android:layout_marginTop="16dp"
                android:text="@string/lig_deslig_comodos"
                android:textColor="@android:color/holo_blue_dark" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="60dp"
                android:orientation="vertical">

                <TableLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:shrinkColumns="*"
                    android:stretchColumns="*">
                    <!-- Linha 2 com 2 colunas -->
                    <TableRow
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="16dp"
                        android:gravity="center_horizontal"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="14dp"
                            android:layout_marginRight="0dp"
                            android:text="@string/sala" />

                        <Switch
                            android:id="@+id/liga_sala"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginRight="14dp"
                            android:onClick="ligarSala"
                            tools:layout_editor_absoluteX="69dp"
                            tools:layout_editor_absoluteY="45dp" />
                    </TableRow>
                    <!-- Linha 2 com 3 colunas -->

                    <TableRow
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="16dp"
                        android:gravity="center_horizontal">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="14dp"
                            android:layout_marginRight="0dp"
                            android:text="@string/quarto_1" />

                        <Switch
                            android:id="@+id/switch_quarto1"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginRight="14dp"
                            android:onClick="ligarQuarto1"
                            tools:layout_editor_absoluteX="69dp"
                            tools:layout_editor_absoluteY="45dp" />
                    </TableRow>

                    <TableRow
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="8dp"
                        android:gravity="center_horizontal">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="14dp"
                            android:layout_marginRight="0dp"
                            android:text="@string/quarto_2" />

                        <Switch
                            android:id="@+id/switch_quarto2"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginRight="14dp"
                            android:onClick="ligarQuarto2"
                            tools:layout_editor_absoluteX="69dp"
                            tools:layout_editor_absoluteY="45dp" />
                    </TableRow>

                </TableLayout>

                <TextView
                    android:id="@+id/ar_condicionado"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="14dp"
                    android:layout_marginTop="16dp"
                    android:text="@string/ar_condicionado"
                    android:textColor="@android:color/holo_blue_dark" />

                <TableLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:shrinkColumns="*"
                    android:stretchColumns="*">

                    <TableRow
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="16dp"
                        android:layout_marginTop="8dp"
                        android:gravity="center_horizontal">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="14dp"
                            android:layout_marginRight="0dp"
                            android:text="ON/OFF" />

                        <Switch
                            android:id="@+id/switch_ar"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginRight="14dp"
                            android:onClick="ligarArCondicionado"
                            tools:layout_editor_absoluteX="69dp"
                            tools:layout_editor_absoluteY="45dp" />
                    </TableRow>

                </TableLayout>
            </LinearLayout>


        </android.support.v7.widget.CardView>
    </LinearLayout>


</LinearLayout>
